--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -618,7 +618,7 @@ new L.Toolbar2.Control({
               }),
 
               subAction.extend({
-                options:{toolbarIcon:{html:'Reset Settings', tooltip: 'Reset Local Data'}},
+                options:{toolbarIcon:{html:'Load Defaults', tooltip: 'Reset Local Data'}},
                 addHooks: function () { 
                   if (confirm('Are you sure you want to reset settings?')) {
                     resetLocalData();
