--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -469,6 +469,7 @@ function loadMarkers() {
     map.addControl( new L.Control.Search({
       layer: markers,
       hideMarkerOnCollapse: true,
+      initial: false,
     }) );
 
 
