--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -135,8 +135,8 @@ let zoom = 11;
 let globalImage = null;
 
 const map = L.map('map', {
-  zoomSnap: .1,
-  wheelDebounceTime: 100,
+  //zoomSnap: .1,
+  //wheelDebounceTime: 100,
 }).setView(pos, zoom);
 
 let markersGroup = L.layerGroup();
