--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -135,7 +135,7 @@ let zoom = 11;
 let globalImage = null;
 
 const map = L.map('map', {
-  //zoomSnap: .1,
+  //zoomSnap: 0.1,
   //wheelDebounceTime: 100,
 }).setView(pos, zoom);
 
