--- a/examples/remap/index.html
+++ b/examples/remap/index.html
@@ -458,7 +458,7 @@ function loadMarkers() {
             a.href = 'https://www.google.com/maps/search/' + encodeURIComponent(s);
             a.target = '_blank';
             let button = document.createElement('button');
-            button.textContent = 'Use this location';
+            button.textContent = 'Fly to location';
             button.onclick = function() { searchLocation(s, name, oldLatLng) }
             let spacer = document.createElement('p');
             div.replaceChildren(a, spacer, button);
